FS-12: Fixed navbar and other button icon shifting down in small screens. Logo now links to project page.

--- a/src/css/inhouse/entry-forms/common.css
+++ b/src/css/inhouse/entry-forms/common.css
@@ -41,8 +41,7 @@
 .small-btn > i {
     font-size: 1.1rem;
     position: absolute;
-    top: -6px;
-    left: 0;
+    line-height: 1.6rem;
 }
 
 .selected-cell {
